--- a/.gitignore
+++ b/.gitignore
@@ -175,7 +175,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# pytype static type analyzer
+# pytype .static type analyzer
 .pytype/
 
 # Cython debug symbols
