--- a/.github/workflows/lab3.yml
+++ b/.github/workflows/lab3.yml
@@ -14,29 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./DevOps/lab3/Dockerfile
-          push: false
-        id: build
+        run: docker build -t lab3 ./DevOps/lab3
 
-      - name: Save Docker image
+      - name: Run main.py script in Docker container
         run: |
-          docker save ${{ steps.build.outputs.image }} -o lab3.tar
-          mv lab3.tar $GITHUB_WORKSPACE/lab3.tar
-          echo "::set-output name=image_path::$GITHUB_WORKSPACE/lab3.tar"
-        id: save
-
-      - name: Upload Docker image artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: docker-image
-          path: ${{ steps.save.outputs.image_path }}
-
-      - name: Run main.py script
-        run: |
-          docker run -v $(pwd)/DevOps/lab3/reports:/app/DevOps/lab3/reports ${{ steps.build.outputs.image }} python DevOps/lab3/main.py
+          docker run -v $(pwd)/DevOps/lab3/reports:/app/DevOps/lab3/reports lab3 python DevOps/lab3/main.py
 
       - name: Upload main.py result artifact
         uses: actions/upload-artifact@v2
