--- a/.github/workflows/lab3.yml
+++ b/.github/workflows/lab3.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: main-result
-          path: reports
+          path: DevOps/lab3/reports
