--- a/.github/workflows/lab3.yml
+++ b/.github/workflows/lab3.yml
@@ -6,26 +6,25 @@ on:
       - 'DevOps/lab3/files/**'
 
 jobs:
-  build_and_run:
+  run-script:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Build Docker image
         run: docker build -t lab3 ./DevOps/lab3
 
-      - name: Run main.py script in Docker container
-        run: docker run -v $(pwd)/reports:/app/reports lab3 python /app/main.py
+      - name: Run docker container
+        run: docker run --name lab3_container lab3
+
+      - name: Copy generated file
+        run: docker cp lab3_container:/app/reports/output.json $GITHUB_WORKSPACE/DevOps/lab3/reports
 
       - name: Commit and push changes
         run: |
-            cd /app/reports
-          
-            git config --global user.email "actions@github.com"
-            git config --global user.name "GitHub Actions"
-            
-            git add *
-            git commit -m "Add new report" || true
-            git push
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add output.json
+          git commit -m "Add output.json"
+          git push
