--- a/.github/workflows/lab3.yml
+++ b/.github/workflows/lab3.yml
@@ -25,6 +25,6 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add output.json
+          git add app/output.json
           git commit -m "Add output.json"
           git push
